added basic background, name, and coming soon tag. Uploading to AWS to test.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href = "app.css">
+  <script src="app.js" defer></script>
   <title>Patrick Hoehn</title>
 </head>
 <body>
-  
+  <header>
+    <h1>Patrick Hoehn</h1>
+    <h2>Sofware Engineer</h2>
+  </header>
+  <h3>Coming Soon</h3>
 </body>
 </html>
