added a navbar with 3 buttons. projects, resume, contact me

--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href = "app.css">
+  <link href="https://fonts.googleapis.com/css2?family=Caladea&display=swap" rel="stylesheet">
   <script src="app.js" defer></script>
   <title>Patrick Hoehn</title>
 </head>
 <body>
   <header>
-    <h1>Patrick Hoehn</h1>
-    <h2>Sofware Engineer</h2>
+    <div id="name-plate">
+      <h1>Patrick Hoehn</h1>
+      <h2>Sofware Engineer</h2>
+    </div>
+    <nav>
+      <button class="nav-button">
+        Projects
+      </button>
+      <button class="nav-button">
+        Resume
+      </button>
+      <button class="nav-button">
+        Contact Me
+      </button>
+    </nav>
   </header>
+
   <h3>Coming Soon</h3>
 </body>
 </html>
