added a blog button in nav bar. Changed main background to a greyscale gradient and linked to profile photo to display on main page

--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
         Resume
       </button>
       <button class="nav-button">
+        Blog
+      </button>
+      <button class="nav-button">
         Contact Me
       </button>
     </nav>
   </header>
-
-  <h3>Coming Soon</h3>
+  <main>
+    <image 
+      id="main-page-profile-pic" 
+      src="https://drive.google.com/uc?id=1CIkHpbvdrzCUOTcUUCGunYasXNU9iezb">
+    </image>
+  </main>
 </body>
 </html>
