centered backgroudn photo. changed overall font. added a home button in nav bar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href = "app.css">
-  <link href="https://fonts.googleapis.com/css2?family=Caladea&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Adamina&display=swap" rel="stylesheet">
   <script src="app.js" defer></script>
   <title>Patrick Hoehn</title>
 </head>
@@ -15,6 +15,9 @@
       <h2>Sofware Engineer</h2>
     </div>
     <nav>
+      <button class="nav-button">
+        Home
+      </button>
       <button class="nav-button">
         Projects
       </button>
@@ -30,10 +33,12 @@
     </nav>
   </header>
   <main>
-    <image 
-      id="main-page-profile-pic" 
-      src="https://drive.google.com/uc?id=1CIkHpbvdrzCUOTcUUCGunYasXNU9iezb">
-    </image>
+    <div id="profile-pic-container">
+      <image 
+        id="main-page-profile-pic" 
+        src="https://drive.google.com/uc?id=1CIkHpbvdrzCUOTcUUCGunYasXNU9iezb">
+      </image>
+    </div>
   </main>
 </body>
 </html>
