added breif bio and icons for github and linkedin

--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
         src="https://drive.google.com/uc?id=1CIkHpbvdrzCUOTcUUCGunYasXNU9iezb">
       </image>
     </div>
+    <div id="bio">
+      <h3>
+        Hello, I'm Patrick.
+      </h3>
+      <p>
+        I am a recent graduate from the Flatiron School bootcamp in Denver. 
+        I had been working in the retail jewelry industry for many years and 
+        I knew I wasn't happy. I wanted to create. I wanted to do something 
+        that actually mattered. I remebered the times in high school when I 
+        was coding and the joys it brought me. I decided it was now or never 
+        to put everything I have into a career change and go for it. 
+      </p>
+      <div id= "icon-div">
+        <img class= "icon" src="https://img.icons8.com/color/48/000000/linkedin.png"/>
+        <img class= "icon" src="https://img.icons8.com/windows/48/000000/github.png"/>      </div>
+    </div>
   </main>
+  <footer>
+    <p id = "footer-text">&copy; 2020 Patrick Hoehn Made with Vanilla <strong>JavaScript & CSS</strong> </p>
+  </footer>
 </body>
 </html>
