added links to footer Icons to blog, linkedin, github

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href = "app.css">
+  <link rel="stylesheet" href = "app1.css">
   <link href="https://fonts.googleapis.com/css2?family=Adamina&display=swap" rel="stylesheet">
   <script src="app.js" defer></script>
   <title>Patrick Hoehn</title>
@@ -12,7 +12,7 @@
   <header>
     <div id="name-plate">
       <h1>Patrick Hoehn</h1>
-      <h2>Sofware Engineer</h2>
+      <h2>Software Engineer</h2>
     </div>
     <nav>
       <button class="nav-button">
@@ -40,9 +40,7 @@
       </image>
     </div>
     <div id="bio">
-      <h3>
-        Hello, I'm Patrick.
-      </h3>
+      <h3> Hello, I'm Patrick.</h3>
       <p>
         I am a recent graduate from the Flatiron School bootcamp in Denver. 
         I had been working in the retail jewelry industry for many years and 
@@ -52,9 +50,16 @@
         to put everything I have into a career change and go for it. 
       </p>
       <div id= "icon-div">
-        <img class= "icon" src="https://img.icons8.com/color/48/000000/linkedin.png"/>
-        <img class= "icon" src="https://img.icons8.com/windows/48/000000/github.png"/>      </div>
-    </div>
+        <a href = "https://www.linkedin.com/in/patrick-hoehn-0a1238197/">
+          <img id = "linkedin-icon"class= "icon" src="https://img.icons8.com/color/48/000000/linkedin.png"/>
+        </a>
+        <a href = "https://github.com/meniality">
+          <img id = "github-icon" class= "icon" src="https://img.icons8.com/windows/48/000000/github.png"/> 
+        </a>
+        <a href ="https://patrh99.wixsite.com/website/blog">
+          <img id = "wix-icon" class= "icon" src="https://img.icons8.com/windows/48/000000/wix.png"/>
+        </a>
+      </div>
   </main>
   <footer>
     <p id = "footer-text">&copy; 2020 Patrick Hoehn Made with Vanilla <strong>JavaScript & CSS</strong> </p>
